avfilter/haldclut: fix R/B swap in CLUT loading

Fixes Ticket #3751.